--- a/src/components/DashboardLink/DashboardLink.module.scss
+++ b/src/components/DashboardLink/DashboardLink.module.scss
@@ -1,17 +1,27 @@
 @import "styles/colors.scss";
 
 .dashboard_link {
-  display: inline-block;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 4px;
   padding: 10px 20px;
   border-radius: 9px;
+  border: 1px solid transparent;
   background-color: $planetarium;
   text-decoration: none;
   color: $white;
-  border: 1px solid transparent;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 500;
   transition: border-color 100ms ease-in-out;
 
   &:hover {
     border-color: $white;
     box-shadow: 0 4px 8px 0 rgba($black, 0.2), 0 6px 20px 0 rgba($black, 0.19);
+  }
+
+  .arrow_icon {
+    width: 25px;
   }
 }
