added snackbar, spinner, fixed cards layout

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,5 @@
 .app_container {
-  padding-top: 60px;
+  padding-block: 50px;
   width: 1140px;
   max-width: calc(100vw - 30px);
   margin: 0 auto;
