--- a/src/components/MediaCard/MediaCard.module.scss
+++ b/src/components/MediaCard/MediaCard.module.scss
@@ -1,15 +1,12 @@
 @import "styles/colors.scss";
 
 .media_card {
-  flex-grow: 1;
-  width: calc(50% - 10px);
-
   .image_wrapper {
     position: relative;
 
     .default_img {
       width: 100%;
-      height: 300px;
+      max-height: 300px;
       object-fit: cover;
     }
 
