--- a/src/components/MediaCardsContainer/MediaCardsContainer.module.scss
+++ b/src/components/MediaCardsContainer/MediaCardsContainer.module.scss
@@ -1,5 +1,5 @@
 .media_cards_container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
