--- a/src/components/MediaCard/MediaCard.module.scss
+++ b/src/components/MediaCard/MediaCard.module.scss
@@ -1,8 +1,16 @@
 @import "styles/colors.scss";
 
 .media_card {
+  position: relative;
+  overflow: hidden;
+  text-decoration: none;
+
   .image_wrapper {
     position: relative;
+    border-radius: 12px 12px 0 0;
+    border: 4px solid $white;
+    transition: border-color 200ms ease-in-out;
+    overflow: hidden;
 
     .default_img {
       width: 100%;
@@ -17,10 +25,53 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: transform 200ms ease-in-out;
 
       &.loaded {
-        z-index: 3;
+        z-index: 1;
       }
+    }
+  }
+
+  .title {
+    margin: 0;
+    padding: 10px;
+    background-color: $white;
+    transition: background-color 200ms ease-in-out;
+    text-align: center;
+    color: $black;
+    font-weight: 500;
+    font-size: 16px;
+  }
+
+  .rating {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    border-radius: 9px;
+    background-color: $black;
+    padding: 6px 10px;
+    color: $white;
+    z-index: 2;
+    transform: translateX(calc(-100% - 10px));
+    transition: transform 200ms ease-in-out;
+  }
+
+  &:hover {
+    .image_wrapper {
+      border-color: $planetarium;
+
+      .cover_img {
+        transform: scale(1.2);
+      }
+    }
+
+    .title {
+      background-color: $planetarium;
+    }
+
+    .rating {
+      transform: translateX(0);
     }
   }
 }
